@@ -2,6 +2,7 @@
 * plugins: #2831 fixed: remove code from plugins object constructors and destructors (Vogel)
 * gui: #2832 fixed: improved behavior of new open chat with window (Vogel)
 * gui: #2833 fixed: dpi in user list (beevvy)
+* gui: #2823 fixed: show scrollbar in plugins widget on Windows (Vogel)
 
 +++ version 1.0-rc3
 * windows: fixed windows build (Vogel)
